--- a/app/views/popup/view_review_scores_popup.html.erb
+++ b/app/views/popup/view_review_scores_popup.html.erb
@@ -5,18 +5,11 @@
 <% assignment = Assignment.find(@assignment_id) %>
 <% if !assignment.vary_by_topic %>
 
-<<<<<<< HEAD
   <h2> Review scores: <%= Participant.find(@reviewer_id).name %> </h2>
-
-  <% keys = @review_final_versions.keys %>
-  <% keys.each do |key| %>
-
-=======
 <% keys = @review_final_versions.keys %>
 <% keys.each do |key| %>
     <br>
     <hr>
->>>>>>> master
     <h4>Course: <%= Assignment.find(@assignment_id).course.name %></h4>
     <h4> Assignment: <%= Assignment.find(@assignment_id).name %></h4>
     <% roundtitle = key.to_s %>
@@ -39,11 +32,7 @@
                         <tr>
                           <% responses.each do |response_id| %>
                               <% team = Team.find(ResponseMap.find(Response.find(response_id).map_id).reviewee_id) %>
-<<<<<<< HEAD
-                              <td><%= team.name(session[:ip]) %></td>
-=======
                               <td><b><%= team.name %></b> <div style ="font-size:11px"> done at -- <%= Response.find(response_id).updated_at.strftime("%a, %b %d, %Y %I:%M:%S %p") %> &nbsp&nbsp</div></td>
->>>>>>> master
                           <% end %>
                         </tr>
 
@@ -65,30 +54,6 @@
                     <td width="70%"> Comments</td>
                   </tr>
 
-<<<<<<< HEAD
-            <% responses.each do |response_id| %>
-              <% answer = Answer.where(response_id: response_id, question_id: question.id).first %>
-                <% if !answer.nil? %>
-                    <tr>
-                      <% team = Team.find(ResponseMap.find(Response.find(response_id).map_id).reviewee_id) %>
-                      <% #TODO does this one need reviewer fixed? %>>
-                      <% response_map = ReviewResponseMap.where(reviewed_object_id: @assignment_id,
-                                                                reviewer_id: @reviewer_id,
-                                                                reviewee_id: team.id).last %>
-                      <% response_update_at = response_map.try(:response).try(:last).try(:updated_at) %>
-                      <% review_graded_at = ReviewGrade.find_by(participant_id: @reviewer_id).try(:review_graded_at) %>
-                      <% col_color = 'black' %>
-                      <% col_color = 'blue' if review_graded_at && response_update_at && response_update_at > review_graded_at %>
-                      <!--Reviewee-->
-                      <td>
-                        <p style="color: <%= col_color %>"><%= team.name %> <br>
-                      </td>
-                      <!--Score-->
-                      <% if question.instance_of? Checkbox %>
-                          <td align='center'>
-                            <p style="color: <%= col_color %>"><%= answer.answer == 0 ? image_tag("delete_icon.png") : image_tag("Check-icon.png") %></p>
-                          </td>
-=======
                   <% responses.each do |response_id| %>
                       <% answer = Answer.where(response_id: response_id, question_id: question.id).first %>
                       <% if !answer.nil? %>
@@ -117,31 +82,22 @@
                             <!--Comments-->
                             <td align='left'><p style="color: <%= col_color %>"><%= answer.comments.html_safe unless answer.comments.nil? %></p></td>
                           </tr>
->>>>>>> master
                       <% else %>
-                          <td align='center'><p style="color: <%= col_color %>"><%= answer.answer %></p></td>
+                        <td>N/A</td>
+                        <td>N/A</td>
+                        <td>N/A</td>
                       <% end %>
-
-                  <!--Comments-->
-                  <td align='left'><p style="color: <%= col_color %>"><%= answer.comments.html_safe unless answer.comments.nil? %></p></td>
-                </tr>
-              <% else %>
-                <td>N/A</td>
-                <td>N/A</td>
-                <td>N/A</td>
+                  <% end %>
               <% end %>
+    <!--<<<<<<< HEAD-->
+            <% else %>
+              <% next %>
             <% end %>
+    <!--=======-->
+            <tr>
+              <td style=" border-left: hidden; border-right: hidden; height: 10px;" colspan="3"></td>
+            </tr>
           <% end %>
-<<<<<<< HEAD
-        <% else %>
-          <% next %>
-        <% end %>
-=======
-        <tr>
-          <td style=" border-left: hidden; border-right: hidden; height: 10px;" colspan="3"></td>
-        </tr>
->>>>>>> master
-      <% end %>
       <tr>
         <th align='left' style="background-color:#DDDDBB"> Reviewee</th>
         <th align='left' colspan="2" style="background-color:#DDDDBB"> Additional Comment</th>
@@ -150,11 +106,7 @@
       <% responses.each do |response_id| %>
           <% team = Team.find(ResponseMap.find(Response.find(response_id).map_id).reviewee_id) %>
           <tr>
-<<<<<<< HEAD
-            <td> <%= team.name(session[:ip]) %> </td>
-=======
             <td> <b><%= team.name %></b> <div style ="font-size:11px"> done at -- <%= Response.find(response_id).updated_at.strftime("%a, %b %d, %Y %I:%M:%S %p") %> &nbsp&nbsp</div></td>
->>>>>>> master
             <td colspan="2"> <%=sanitize Response.find(response_id).additional_comment %> </td>
           </tr>
       <% end %>
