--- a/app/views/grades/_submissions.html.erb
+++ b/app/views/grades/_submissions.html.erb
@@ -1,9 +1,8 @@
 <% topic_id = SignedUpTeam.topic_id(participant.parent_id, participant.user_id)%>
 <%= render :partial => 'submitted_content/main', :locals => {:participant => participant, :stage => participant.assignment.current_stage(topic_id)} %>
 
-<% unless controller.action_name == "view_my_scores" %>
-   <% participant = AssignmentParticipant.find_by_user_id_and_parent_id(session[:user].id, @assignment.id)
-      reviewer = participant.get_reviewer unless participant.nil?
+<% if controller.action_name != "view_my_scores" %>
+   <% reviewer = AssignmentParticipant.find_by_user_id_and_parent_id(session[:user].id, @assignment.id)
       #ACS Map the reviewee to a team
       unless reviewer.nil?
          reviewee = participant.team  
