--- a/app/views/response/response.html.erb
+++ b/app/views/response/response.html.erb
@@ -346,49 +346,41 @@
 <input type="checkbox" id="autosave_cbx" checked>
 <label id="autosave_cbx_lbl" for="autosave_cbx"></label>
 <div id="save_progress"></div>
-<%= form_tag({ :action => @next_action }, :id => @modified_object, :class => "review_form") do %>
+<%= form_tag({:action => @next_action}, :id => @modified_object, :class => "review_form") do %>
   <%= hidden_field_tag "map_id", @modified_object %>
   <%= hidden_field_tag "saved", (@header == "New") ? 1 : 0 %>
-  <% if @next_action.eql? 'update' %>
-    <input name="_method" type="hidden" value="put"/>
-  <% end %>
+  <% if @next_action.eql?'update' %>
+      <input name="_method" type="hidden" value="put" />
+  <%end%>
   <table width="100%">
-    <% @questions.each_with_index do |question, i| %>
+    <% i = 0 %>
+    <% @questions.group_by{ |ques| ques.questionnaire }.each do |questionnaire, grouped_questions | %>
+    <% if questionnaire.display_heading? %>
       <tr>
-        <td>
-            <% answer = Answer.where(question_id: question.id, response_id: @response.id).first unless @response.nil? %>
-            <% if question.instance_of? Criterion %>
-              <%= question.complete(i, answer, @questionnaire.min_question_score, @questionnaire.max_question_score, @dropdown_or_scale) %>
-            <% elsif question.instance_of? Scale %>
-              <%= question.complete(i, @questionnaire.min_question_score, @questionnaire.max_question_score, answer) %>
-            <% elsif question.instance_of? Cake %>
-              <%= question.complete(i, answer, @total_score[question.id].to_s) %>
-            <% else %>
-              <%= question.complete(i, answer) %>
-            <% end %>
-
-            <% if [Criterion, TextArea].include? question.class %>
-              <div id="analysis_<%= i.to_s %>_comments"></div>
-            <% end %>
+        <td>  
+          <h2><%= questionnaire.display_type %></h2>
         </td>
       </tr>
     <% end %>
-    <tr>
-      <td>
-        <label for="review_comments">Additional Comments</label><BR/>
-        <textarea cols="70" rows="1" id="review_comments" name="review[comments]" style="overflow:hidden;" class="tinymce">
-            <% unless controller.action_name == 'new' || @response.additional_comment.nil? %>
-                <%= @response.additional_comment.strip unless @response.nil? %>
+    <% grouped_questions.each do |question| %>
+      <tr>
+        <td>
+            <% answer = Answer.where(question_id: question.id, response_id: @response.id).first if !@response.nil?%>
+            <% if question.instance_of? Criterion%>
+              <%= question.complete(i, answer, @questionnaire.min_question_score, @questionnaire.max_question_score, @dropdown_or_scale) %>
+            <% elsif question.instance_of? Scale %>
+              <%= question.complete(i, @questionnaire.min_question_score, @questionnaire.max_question_score, answer) %>
+            <% else %>
+              <%= question.complete(i, answer) %>
             <% end %>
-          </textarea>
-      </td>
-      <td width="25%">
-        <div id="review_comments_analysis"></div>
-      </td>
-    </tr>
-
-    <!-- Add a Good Teammate badge to the Teammate Review Questionnaire if the assignment has badges -->
-    <% if @assignment.badge? and (@questionnaire.type == 'TeammateReviewQuestionnaire' or @questionnaire.type == 'Teammate ReviewQuestionnaire') and AssignmentBadge.where(assignment_id: @assignment.id, badge_id: Badge.get_id_from_name('Good Teammate')).any? %>
+            <% if [Criterion, TextArea].include? question.class %>
+              <div id="analysis_<%= i.to_s %>_comments"></div>
+            <% end %>
+            <% i += 1%>
+        </td>
+      </tr>
+    <% end %>
+    <% end %>
       <tr>
         <td>
           <img width="100px" src=<%= "/assets/badges/#{Badge.get_image_name_from_name("Good Teammate")}" %> title="GoodTeammate">
