--- a/app/views/assignments/edit/_general.html.erb
+++ b/app/views/assignments/edit/_general.html.erb
@@ -188,7 +188,7 @@ function autogenerate_submission(){
   <tr>
     <td style='padding:5px' id='assignment_revison_planning_field'>
       <input name="assignment_form[assignment][is_revision_planning_enabled]" type="hidden" value="false"/>
-      <%= check_box_tag('assignment_form[assignment][is_revision_planning_enabled]', 'true', @assignment_form.assignment.is_revision_planning_enabled) %>
+      <%= check_box_tag('assignment_form[assignment][is_revision_planning_enabled]', 'true') %>
       <%= label_tag('assignment_form[assignment][is_revision_planning_enabled]', 'Revision planning?') %>
     </td>
   </tr>
